WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121790
[Qt] RepaintRequested signal sometimes not emitted
https://bugs.webkit.org/show_bug.cgi?id=121790
Summary
[Qt] RepaintRequested signal sometimes not emitted
Allan Sandfeld Jensen
Reported
2013-09-23 07:54:50 PDT
If updates are triggered through PageClient::repaintViewport() we do not emit the QWebPage::repaintRequested signal since this is only emitted from ChromeClientQt::invalidateContentsAndRootView.
Attachments
Patch
(1.88 KB, patch)
2013-09-23 07:56 PDT
,
Allan Sandfeld Jensen
no flags
Details
Formatted Diff
Diff
Patch
(1.85 KB, patch)
2013-09-23 08:23 PDT
,
Allan Sandfeld Jensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Allan Sandfeld Jensen
Comment 1
2013-09-23 07:56:18 PDT
Created
attachment 212350
[details]
Patch
Early Warning System Bot
Comment 2
2013-09-23 08:02:48 PDT
Comment on
attachment 212350
[details]
Patch
Attachment 212350
[details]
did not pass qt-wk2-ews (qt-wk2): Output:
http://webkit-queues.appspot.com/results/1799491
Allan Sandfeld Jensen
Comment 3
2013-09-23 08:23:08 PDT
Created
attachment 212352
[details]
Patch
WebKit Commit Bot
Comment 4
2013-09-24 07:09:29 PDT
Comment on
attachment 212352
[details]
Patch Clearing flags on attachment: 212352 Committed
r156329
: <
http://trac.webkit.org/changeset/156329
>
WebKit Commit Bot
Comment 5
2013-09-24 07:09:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug