[Qt] RepaintRequested signal sometimes not emitted https://bugs.webkit.org/show_bug.cgi?id=121790

Reviewed by Simon Hausmann.

We should also emit repaintRequested after calling PageClient::update().

* WidgetSupport/PageClientQt.cpp:
(WebCore::PageClientQWidget::repaintViewport):
(WebCore::PageClientQGraphicsWidget::repaintViewport):


Canonical link: https://commits.webkit.org/139837@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156329 268f45cc-cd09-0410-ab3c-d52691b4dbfc